# llm-conductor

./: ADDITIONAL_TESTING.md  ARCHITECTURE.md  AUTONOMY_SAFETY.md  BUNDLING_STRATEGY.md  CONTEXT_MANAGEMENT.md  Cargo.toml  DYNAMIC_ORCHESTRATION.md  GETTING_STARTED.md  HEADLESS_TESTING.md  INSTALLATION.md  INSTALLATION_STATUS.md  LICENSE  NIXOS_USAGE.md  NIX_PACKAGING.md  PLATFORM_NOTES.md  PROJECT_SUMMARY.md  README.md  README.old  ROADMAP.md  TESTING.md  TESTING_CREATIVE.md  capture_network.md  flake.nix  result  test_chat.sh  test_context_sync.txt  test_conversation.txt
docs/: NIXOS_CONFIG.md  OUTLIER_SETUP.md  PROVIDER_CONTROL.md
scripts/: Extract-OutlierCookies.ps1  extract-outlier-windows.py
src/: agent.rs  conductor.rs  context.rs  lib.rs  main.rs  model_filter.rs  providers.rs  router.rs  safety.rs  ui.rs  usage_tracking.rs
src/cli/: executor.rs  mod.rs  repl.rs  session.rs  tty.rs
src/config/: mod.rs  providers.rs
src/providers/: github.rs  mod.rs  nvidia.rs  ollama.rs  outlier.rs  tamu.rs
src/resources/: mod.rs
src/router/: mod.rs
src/setup/: first_run.rs  mod.rs  models.rs  ollama.rs
src/types/: context.rs  message.rs  mod.rs  model.rs  task.rs
