[package]
name = "llm-conductor"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Holmes"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rustyline = { version = "14", default-features = false }
colored = "2"
indicatif = "0.17"
dialoguer = { version = "0.11", default-features = false }
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
bytes = "1"
futures = "0.3"

[profile.release]
lto = true
strip = true
